services.js + webstorm: reformating
